--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "puppeteer": "^24.2.1",
+    "puppeteer-core": "^21.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
