--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "generateTemplateEmail",
+  "name": "postlyapi",
   "version": "1.0.0",
-  "main": "server.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "nodemon": "^3.1.9",
-    "puppeteer": "^24.2.1",
-    "puppeteer-core": "^21.0.0",
+    "playwright-aws-lambda": "^0.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/register": "^7.23.7"
+    "@types/node": "^18.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "echo 'Build complete'",
+    "start": "vercel dev"
   }
 }
