--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@sparticuz/chromium": "^137.0.1",
     "playwright-core": "^1.53.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vercel": "^44.2.11"
   },
   "devDependencies": {
     "@types/node": "^18.0.0"
